ocfl-java-itest/src/test/resources/invalid-repos/missing-version/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v2/inventory.json.sha512
c15f51c96fafe599dd056c1782fce5e8d6a0461017260ec5bc751d12821e2a7c2344048fc32312d57fdbdd67ec32e238a5f68e5127a762dd866e77fcddbaa3ce	inventory.json